# ApplyTex

./: .env.example  CHANGELOG.md  NOTICE  README.md  pyproject.toml
src/applytex/: __init__.py  __main__.py  cli.py  config.py  database.py  llm.py  pipeline.py  registry.py  view.py
src/applytex/analysis/: __init__.py  gaps.py
src/applytex/apply/: chrome.py  dashboard.py  launcher.py  prompt.py
src/applytex/config/: config.example.yaml  employers.yaml  searches.example.yaml  sites.yaml  skill_adjacency.example.yaml
src/applytex/discovery/: jobspy.py  location_filter.py  search_config.py  smartextract.py  workday.py
src/applytex/enrichment/: detail.py
src/applytex/jobs/: __init__.py  add.py  urls.py
src/applytex/latex/: __init__.py  compiler.py  import_source.py  keywords.py  patch.py  placement.py  review.py  tailor.py  tailor_plan.py  text_export.py  utils.py  validator.py
src/applytex/scoring/: cover_letter.py  pdf.py  scorer.py  tailor.py  validator.py
src/applytex/wizard/: init.py
tests/: __init__.py  test_add.py  test_bugfixes.py  test_e2e_flow.py  test_keyword_match.py  test_latex.py  test_p1_fixes.py  test_pipeline_upstream.py  test_registry.py  test_search_config.py  test_validator.py
